# hdfs-operator

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.nix  Cargo.toml  Makefile  README.adoc  README.md  Tiltfile  crate-hashes.json  default.nix  deny.toml  dev.sh  kerberos-fail.txt  rust-toolchain.toml
.ci/integration-tests/aws-eks/: cluster.yaml  test.sh
.ci/integration-tests/azure-aks/: cluster.yaml
.ci/integration-tests/hcloud-centos-8/: cluster.yaml
.ci/integration-tests/ionos-k8s/: cluster.yaml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: 02-bug_report.yml  bug_report.yml  config.yml  new_version.md
.github/PULL_REQUEST_TEMPLATE/: pre-release-rust-deps.md
.github/workflows/: build.yaml  build.yml  build_artifacts.yml  daily_security.yml  general_daily_security.yml  pr_prek.yaml  publish_dev_artifacts.yml  publish_main_artifacts.yml  publish_pr_artifacts.yml  publish_release_artifacts.yml  reviewdog.yaml  rust.yml
.readme/: README.md.j2
.readme/partials/: main.md.j2
crd/: Cargo.toml  hdfscluster.crd.yaml
crd/src/: lib.rs
crd/testdata/: simple_cluster.yaml
deploy/: DO_NOT_EDIT.md
deploy/config-spec/: properties.yaml
deploy/crd/: format.crd.yaml  hdfscluster.crd.yaml  restart.crd.yaml  start.crd.yaml  stop.crd.yaml
deploy/helm/hdfs-operator/: Chart.yaml  README.md  values.yaml
deploy/helm/hdfs-operator/configs/: properties.yaml
deploy/helm/hdfs-operator/crds/: crds.yaml
deploy/helm/hdfs-operator/templates/: clusterrole-operator.yaml  clusterrole-product.yaml  deployment.yaml  roles-hdfs.yaml  roles.yaml  serviceaccount.yaml
deploy/manifests/: configmap.yaml  crds.yaml  deployment.yaml  roles-hdfs.yaml  roles.yaml  serviceaccount.yaml
deploy/olm/: bundle.sh
deploy/olm/23.1.0/manifests/: hdfscluster.yaml  stackable-hdfs-operator.clusterserviceversion.yaml
deploy/olm/23.4.0/manifests/: stackable-hdfs-operator.clusterserviceversion.yaml
docker/: Dockerfile  Dockerfile.devel
docs/: antora.yml  templating_vars.yaml
docs/modules/ROOT/: nav.adoc
docs/modules/ROOT/pages/: building.adoc  commandline_args.adoc  discovery.adoc  env_var_args.adoc  implementation.adoc  index.adoc  installation.adoc  usage.adoc
docs/modules/ROOT/partials/: supported-versions.adoc
docs/modules/getting_started/pages/: first_steps.adoc  index.adoc  installation.adoc
docs/modules/hdfs/: nav.adoc
docs/modules/hdfs/pages/: discovery.adoc  env_var_args.adoc  index.adoc
docs/modules/hdfs/partials/: nav.adoc  supported-versions.adoc
example/: hdfscluster.example.yaml
examples/: restart.command.example.yaml  simple-hdfs-cluster.yaml  start.command.example.yaml  stop.command.example.yaml
extra/: crds.yaml
nix/: meta.json  sources.json
operator/: Cargo.toml
operator/src/: error.rs  hdfs.rs  lib.rs
rust/crd/: Cargo.toml
rust/crd/src/: affinity.rs  commands.rs  constants.rs  discovery.rs  error.rs  kerberos.rs  lib.rs  security.rs  storage.rs
rust/operator/: Cargo.toml
rust/operator-binary/: Cargo.toml  build.rs
rust/operator-binary/src/: config.rs  container.rs  discovery.rs  event.rs  framework.rs  hdfs_clusterrolebinding_nodes_controller.rs  hdfs_controller.rs  kerberos.rs  kerberos_hdfs_3.2_stacktrace.txt  labels.rs  main.rs  pod_svc_controller.rs  product_logging.rs  service.rs  stackable-hdfs-operator.rs  test_support.rs
rust/operator-binary/src/config/: jvm.rs  jvm_arguments.rs  mod.rs  writer.rs
rust/operator-binary/src/controller/: dereference.rs  mod.rs  validate.rs
rust/operator-binary/src/crd/: affinity.rs  constants.rs  mod.rs  security.rs  storage.rs
rust/operator-binary/src/framework/: role_utils.rs
rust/operator-binary/src/operations/: graceful_shutdown.rs  mod.rs  pdb.rs
rust/operator-binary/src/security/: kerberos.rs  mod.rs  opa.rs
rust/operator-binary/src/utils/: mod.rs  statefulset.rs
rust/operator-binary/src/webhooks/: conversion.rs
rust/operator/src/: config.rs  container.rs  discovery.rs  error.rs  event.rs  hdfs_controller.rs  kerberos.rs  lib.rs  listener.rs  old_controller.rs  pod_svc_controller.rs  product_logging.rs  rbac.rs  utils.rs
rust/operator/src/operations/: graceful_shutdown.rs  pdb.rs
scripts/: README.md  docs_templating.sh  generate-manifests.sh  render_readme.sh
server/: Cargo.toml
server/packaging/: buildrpm.sh
server/packaging/debian/: service
server/packaging/rpm/SOURCES/stackable-hdfs-operator-server-VERSION/usr/lib/systemd/system/: stackable-hdfs-operator-server.service
server/packaging/rpm/SPECS/: stackable-hdfs-operator-server.spec
server/src/: main.rs
tests/: infrastructure.yaml  interu.yaml  release.yaml  test-definition.yaml
tests/stack/: 01-install-krb5-kdc.yaml  02-create-kerberos-secretclass.yaml  03-hdfs.yaml  04-rolebinding.yaml
tests/templates/kuttl/cluster-operation/: 10-install-zk.yaml.j2  20-assert.yaml.j2  20-install-hdfs.yaml.j2  30-assert.yaml.j2  30-stop-hdfs.yaml.j2  40-assert.yaml.j2  40-pause-hdfs.yaml.j2  50-assert.yaml.j2  50-restart-hdfs.yaml.j2
tests/templates/kuttl/cluster-operations/: 02-assert.yaml.j2  02-install-hdfs.yaml.j2  10-assert.yaml  10-pause-hdfs.yaml.j2  20-assert.yaml  20-stop-hdfs.yaml.j2  30-assert.yaml  30-restart-hdfs.yaml.j2
tests/templates/kuttl/external-access/: 20-install-zk.yaml.j2  30-install-hdfs.yaml.j2  40-assert.yaml  operate-on-cluster.sh  testdata.txt
tests/templates/kuttl/fs-ops/: 00-assert.yaml  00-install-zk.yaml.j2  01-assert.yaml  01-install-hdfs.yaml.j2  02-assert.yaml  02-webhdfs.yaml  03-assert.yaml  03-create-file.yaml  requirements.txt
tests/templates/kuttl/kerberos/: 00-rbac.yaml.j2  01-assert.yaml  01-assert.yaml.j2  01-install-krb5-kdc.yaml.j2  02-create-kerberos-secretclass.txt.j2  02-create-kerberos-secretclass.yaml.j2  10-assert.yaml  10-install-zk.yaml.j2  11-assert.yaml  11-install-hdfs.yaml.j2  11-install-opa.yaml.j2  12-rego-rules.txt.j2  12-rego-rules.yaml  12-rego-rules.yaml.j2  20-access-hdfs.yaml  20-access-hdfs.yaml.j2  20-assert.yaml  20-install-hdfs.txt.j2  20-install-hdfs.yaml.j2  21-unleash-the-chaosmonkey.yaml.j2  22-assert.yaml  22-check-file.yaml.j2  (+5 more)
(+136 files in other folders)
