[package]
name = "stackable-hdfs-crd"
version = "0.1.0"
authors = ["Lars Francke <lars.francke@stackable.de>"]
edition = "2018"

[dependencies]
#stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", branch = "main" }
stackable-operator = { path = "../../operator-rs" }
kube = { version = "0.49", default-features = false }
kube-derive = { version = "0.49.0", default-features = false, features = ["schema"] }
kube-runtime = { version = "0.49.0", default-features = false }
k8s-openapi = { version = "0.11.0", default-features = false }
schemars = "0.8"
semver = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0" # Needed by the CustomResource annotation
serde_yaml = "0.8"
strum = "0.20"
strum_macros = "0.20"

[dev-dependencies]
k8s-openapi = { version = "0.11", default-features = false, features = ["v1_20"] }
