[package]
authors = ["Lars Francke <lars.francke@stackable.de>"]
description = "Stackable Operator for Apache Hadoop HDFS - The Custom Resource Definition"
edition = "2018"
license = "OSL-3.0"
name = "stackable-hdfs-crd"
version = "0.1.0-nightly"

[dependencies]
stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", branch = "main" }

k8s-openapi = { version = "0.11.0", default-features = false }
kube = { version = "0.49", default-features = false }
kube-derive = { version = "0.49.0", default-features = false, features = ["schema"] }
kube-runtime = { version = "0.49.0", default-features = false }
schemars = "0.8"
semver = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1" # Needed by the CustomResource annotation
strum = "0.20"
strum_macros = "0.20"

[dev-dependencies]
k8s-openapi = { version = "0.11", default-features = false, features = ["v1_20"] }
