[package]
name = "stackable-hdfs-operator"
version = "0.1.0"
authors = ["Lars Francke <lars.francke@stackable.de>"]
edition = "2018"

[dependencies]
stackable-hdfs-crd = { path = "../crd" }
#stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", branch = "hackathon", path = "../../operator-rs" }
stackable-operator = { path = "../../operator-rs" }

async-trait = "0.1"
futures = "0.3"
handlebars = "3"
schemars = "0.8"
k8s-openapi = { version = "0.11.0", default-features = false }
kube = { version = "0.49", default-features = false }
kube-runtime = { version = "0.49", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1"
strum = "0.20"
strum_macros = "0.20"

[dev-dependencies]
rstest = "0.6"
