[package]
authors = ["Lars Francke <lars.francke@stackable.de>"]
description = "Stackable Operator for Apache Hadoop HDFS - The Operator Library"
edition = "2018"
license = "OSL-3.0"
name = "stackable-hdfs-operator"
version = "0.1.0-nightly"

[dependencies]
stackable-hdfs-crd = { path = "../crd" }
stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", branch = "main" }

async-trait = "0.1"
futures = "0.3"
handlebars = "3"
k8s-openapi = { version = "0.11.0", default-features = false }
kube = { version = "0.49", default-features = false }
kube-runtime = { version = "0.49", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1"

[dev-dependencies]
rstest = "0.6"
