[package]
authors = ["Lars Francke <lars.francke@stackable.de>"]
description = "Stackable Operator for Apache Hadoop HDFS - The main binary"
edition = "2018"
license = "Apache-2.0"
name = "stackable-hdfs-operator-server"
version = "0.1.0"

[dependencies]
stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", branch = "main" }
stackable-hdfs-crd = { path = "../crd" }
stackable-hdfs-operator = { path = "../operator" }

k8s-openapi = { version = "0.11.0", default-features = false, features=["v1_20"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }


serde_yaml = "0.8"
