[package]
authors = ["Lars Francke <lars.francke@stackable.de>"]
description = "Stackable Operator for Apache Hadoop HDFS - The main binary"
edition = "2018"
license = "OSL-3.0"
name = "stackable-hdfs-operator-server"
version = "0.1.0-nightly"

[dependencies]
stackable-hdfs-crd = { path = "../crd" }
stackable-hdfs-operator = { path = "../operator" }
stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", branch = "main" }

k8s-openapi = { version = "0.11.0", default-features = false, features=["v1_20"] }
serde_yaml = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[package.metadata.deb]
maintainer-scripts = "packaging/debian/"
systemd-units = { enable = false }
assets = [
    ["../target/release/stackable-hdfs-operator-server", "opt/stackable/hdfs-operator/", "755"],
]
