[package]
authors = ["Lars Francke <lars.francke@stackable.de>"]
description = "Stackable Operator for Apache Hadoop HDFS - The main binary"
edition = "2018"
license = "OSL-3.0"
name = "stackable-hdfs-operator-server"
version = "0.1.0-nightly"

[dependencies]
stackable-hdfs-operator = { path = "../operator" }
stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", branch = "main" }

tokio = { version = "1.7", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"

[package.metadata.deb]
maintainer-scripts = "packaging/debian/"
systemd-units = { enable = false }
assets = [
    ["../target/release/stackable-hdfs-operator-server", "opt/stackable/hdfs-operator/", "755"],
]
