[package]
authors = ["Stackable GmbH info@stackable.de"]
description = "Contains the Apache HDFS CRD structs and utilities"
edition = "2021"
license = "OSL-3.0"
name = "stackable-hdfs-crd"
repository = "https://github.com/stackabletech/hdfs-operator"
version = "0.0.0-dev"
publish = false

[dependencies]
stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", tag = "0.41.0" }

semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
snafu = "0.7"
strum = { version = "0.24", features = ["derive"] }
tracing = "0.1"
futures = "0.3.30"

[dev-dependencies]
serde_yaml = "0.8"
rstest = "0.17"
