[package]
name = "stackable-hdfs-operator-binary"
description = "Stackable Operator for Apache Hadoop HDFS"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
publish = false
build = "build.rs"

[dependencies]
stackable-hdfs-crd = { path = "../crd" }
stackable-hdfs-operator = { path = "../operator" }

anyhow.workspace = true
clap.workspace = true
stackable-operator.workspace = true
tokio.workspace = true
tracing.workspace = true

[build-dependencies]
built.workspace = true

[[bin]]
name = "stackable-hdfs-operator"
path = "src/stackable-hdfs-operator.rs"
