[package]
name = "stackable-hdfs-operator"
description = "Stackable Operator for Apache Hadoop HDFS"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
publish = false

[dependencies]
product-config.workspace = true
stackable-operator.workspace = true
stackable-telemetry.workspace = true
stackable-versioned.workspace = true

anyhow.workspace = true
clap.workspace = true
const_format.workspace = true
futures.workspace = true
indoc.workspace = true
serde_json.workspace = true
serde.workspace = true
snafu.workspace = true
strum.workspace = true
tokio.workspace = true
tracing-futures.workspace = true
tracing.workspace = true

[dev-dependencies]
rstest.workspace = true
serde_yaml.workspace = true

[build-dependencies]
built.workspace = true

[[bin]]
name = "stackable-hdfs-operator"
path = "src/main.rs"
