[package]
authors = ["Stackable GmbH info@stackable.tech"]
description = "Stackable Operator for Apache Hadoop HDFS - The Operator Library"
edition = "2021"
license = "OSL-3.0"
name = "stackable-hdfs-operator"
repository = "https://github.com/stackabletech/hdfs-operator"
version = "0.0.0-dev"
publish = false

[dependencies]
stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", tag = "0.45.1" }
stackable-hdfs-crd = { path = "../crd" }

futures = "0.3"
indoc = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
snafu = "0.7"
strum = "0.24"
tokio = { version = "1.28", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-futures = { version = "0.2", features = ["futures-03"] }
